--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ discus-identifier:  XXX
 # Author settings
 author:
   name: Attila Roshani khiyavy
-  bio: Computer Engineering student @pardinus <br> Founder @zaqa <br> Open Source /#linux
+  bio: Computer Engineering student @iust <br> Founder @AtiaRoshani <br> Open Source /#linux
   picture: assets/images/profile.jpg 
   github: onepase # github username
   twitter: AUrushan # twitter username
